[intern] This is a performance patch: All occurences of new Boolean(...) have been replaced by static methods in java.lang.Boolean thereby removing object instanciation, decreasing required memory and increasing execution speed.