@@ -87,7 +87,7 @@ public class BoldFormatAction
 		htmlElement.addObserver(this);
 
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 
 	}
 
@@ -115,14 +115,11 @@ public class BoldFormatAction
 
 			if (e.getName().equals("html")) {
 				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 
 				// This action should only be enabled in html mode
-				setEnabled(html);
-
+				setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 			}
 		}
-
 	}
 
 	/*
