@@ -63,7 +63,7 @@ public class InsertBreakAction extends FrameAction
 		htmlElement.addObserver(this);
 		
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 	}
 
 	/**
@@ -79,12 +79,10 @@ public class InsertBreakAction extends FrameAction
 			XmlElement e = (XmlElement) arg0;
 
 			if (e.getName().equals("html")) {
-				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 				
 				// This action should only be enabled in html mode
-				setEnabled(html);
-				
+				setEnabled(Boolean.valueOf(
+                                        e.getAttribute("enable", "false")).booleanValue());
 			}
 		}
 	}
