@@ -120,7 +120,7 @@ public class ParagraphMenu extends IMenu
 		htmlElement.addObserver(this);
 		
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 		
 	}
 
@@ -176,10 +176,9 @@ public class ParagraphMenu extends IMenu
 
 			if (e.getName().equals("html")) {
 				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 				
 				// This action should only be enabled in html mode
-				setEnabled(html);
+				setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 			}
 		}
 				
