@@ -82,7 +82,7 @@ public class RightJustifyAction extends CheckBoxAction
 		htmlElement.addObserver(this);
 		
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 	}
 
 	/**
@@ -109,11 +109,9 @@ public class RightJustifyAction extends CheckBoxAction
 
 			if (e.getName().equals("html")) {
 				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 				
 				// This action should only be enabled in html mode
-				setEnabled(html);
-				
+				setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 			}
 		}
 	}
