@@ -81,7 +81,7 @@ public class StrikeoutFormatAction extends CheckBoxAction
 		htmlElement.addObserver(this);
 		
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 	}
 
 	/**
@@ -108,14 +108,11 @@ public class StrikeoutFormatAction extends CheckBoxAction
 
 			if (e.getName().equals("html")) {
 				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 				
 				// This action should only be enabled in html mode
-				setEnabled(html);
-				
+				setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 			}
 		}
-
 	}
 
 	/* (non-Javadoc)
