@@ -85,8 +85,7 @@ public class TeleTyperFormatAction
 		htmlElement.addObserver(this);
 
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
-
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 	}
 
 	/**
@@ -113,11 +112,9 @@ public class TeleTyperFormatAction
 
 			if (e.getName().equals("html")) {
 				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 
 				// This action should only be enabled in html mode
-				setEnabled(html);
-
+				setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 			}
 		}
 	}
