@@ -90,7 +90,7 @@ public class UnderlineFormatAction
 		htmlElement.addObserver(this);
 
 		// set initial enabled state
-		setEnabled((new Boolean(enableHtml)).booleanValue());
+		setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 	}
 
 	/**
@@ -118,10 +118,9 @@ public class UnderlineFormatAction
 
 			if (e.getName().equals("html")) {
 				String enableHtml = e.getAttribute("enable", "false");
-				boolean html = (new Boolean(enableHtml)).booleanValue();
 
 				// This action should only be enabled in html mode
-				setEnabled(html);
+				setEnabled(Boolean.valueOf(enableHtml).booleanValue());
 			}
 		}
 
